Update INTRODUCCION TAREA 1-2.html
update 10/08/2022

--- a/SEMANA1-2/INTRODUCCION TAREA 1-2.html
+++ b/SEMANA1-2/INTRODUCCION TAREA 1-2.html
@@ -16,6 +16,10 @@
         <hr align="center" width="80%" color=orange>
 
         <font color="blown"><s> AÑO DOS MILL QUINIENTOS</s></font>
+        
+        
+        <p>Lorem  dolor sit adipisicing elit.<font color="green">At quibusdam explicabo unde, magni eos dolorem! Sit vero nam magnam aliquam modi dolorem ducimus natus culpa voluptatem consequuntur. Dolores, inventore perspiciatis.</font></p>
+
 
 
 
