--- a/Semana 4/Ejercicio1.HTML
+++ b/Semana 4/Ejercicio1.HTML
@@ -46,9 +46,9 @@
             <label>Seccion tus hobbies:
             </label>
                 <br>
-                <inpunt name="cine" type="checkbox">Cine</inpunt>
-                <inpunt name="lectura" type="checkbox">lectura</inpunt>
-                <inpunt name="deporte" type="checkbox">deporte</inpunt>
+                <input name="cine" type="checkbox">Cine</inpunt>
+                <input name="lectura" type="checkbox">lectura</inpunt>
+                <input name="deporte" type="checkbox">deporte</inpunt>
             <br>
 
             <!--Estado civil-->
